--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@ Gurgle
     <div class="row">
         <div class="col-sm-3 col-xs-1"></div>
         <div class="col-sm-6 col-xs-10">
-            <form submit="{{ serchModule.gurgleSerch() }}">
+            <form action="/gurgleSerch" method="post">
                 <input type="text" class="form-control" id="searchbar">
                 <button type="submit" class="btn btn-default">Gurgle Serch</button>
                 <button type="button" class="btn btn-default" href="#">I'm Feeling Gurgly</button>
