--- a/app/templates/translait.html
+++ b/app/templates/translait.html
@@ -7,11 +7,8 @@ Gurgle - Translate
 
 
 {% block content %}
-<div class="jumbotron text-center">
-  <h1>Gurgle Translait</h1>
-</div>
-
-<div class="container-fluid">
+<div class="container-fluid content">
+    <h1>Gurgle Translait</h1>
     <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="btn-group">
