--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@ Gurgle - Base
 {% block styles %}
 {{super()}}
 <link rel="stylesheet"
-      href="{{url_for('.static', filename='base.css')}}">
+      href="{{url_for('static', filename='base.css')}}">
 {% endblock %}
 
 {% block navbar %}
